# prompt-injection-security

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: report-fortified-v2.json  report-fortified.json  report.json
references/: compliance-mapping.md  defense-templates.md  full-patterns.md  report-format.md  sigma-rules.yaml  test-cases.yaml  variant-templates.yaml  vendor-comparison.md
scripts/: __init__.py  audit_system_prompt.py  cases.py  combinations.py  compare.py  indirect_scanner.py  judge.py  markers.py  netsec.py  providers.py  test_aggregate.py  test_compare.py  test_indirect_ssrf.py  test_llm.py  test_markers_judge.py  test_netsec.py  test_oss_fixes.py  test_severity_canary.py  triage.py  variants.py
